Java Marine API release notes
Version @VERSION@ (b@BUILD_ID@)
<http://marineapi.sourceforge.net/>
Copyright (C) 2010-@YEAR@ Kimmo Tuukkanen <ktuukkan@users.sourceforge.net>

Pre-alpha preview release, not to be used in production. Major API changes may
be introduced in future versions. Released on @RELEASE_DATE@.

CHANGES

 * Bugfix in SentenceFactory, DPT parser was not automatically registered.
  
 * Parsing methods in SentenceId now validates the given String before parsing
   the id.
   
 * Double values are now rounded to certain decimal precision by setters. Also,
   course and bearing values are padded with leading zeros.
  
NEW FEATURES
 
 * Added method for unregistering parsers in SentenceFactory.
 
 * SentenceParser; added methods for setting double and integer values with
   leading zeros. Double values can also be rounded to certain precision.

KNOWN ISSUES
  
 * Position.distanceTo() may not produce correct results.
 